--- a/index.html
+++ b/index.html
@@ -65,28 +65,31 @@
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
                         <h4><strong>학력</strong></h4>
-                        <p class="text-faded mb-0">2015년 3월 ~ 2018년 2월 남원여자고등학교</p>
-		<p class="text-faded mb-0">2018년 3월 ~ 2022년 2월 전주대학교</p>
+                        <p class="text-faded mb-0">2015년 3월 ~ 2018년 2월</p>
+		<p class="text-faded mb-0">남원여자고등학교</p>
+		<p class="text-faded mb-0">2018년 3월 ~ 2022년 2월</p>
+		<p class="text-faded mb-0">전주대학교</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
                         <h4><strong>교육</strong></h4>
-                        <p class="text-faded mb-0">JAVA python androidstudio sql</p>
+                        <p class="text-faded mb-0">JAVA python</p>
+		<p class="text-faded mb-0">androidstudio sql</p>
 		<p class="text-faded mb-0">wp Arduino</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
                         <h4><strong>경력</strong></h4>
                         <p class="text-faded mb-0">
-                            <p class="text-faded mb-0">2019년 문화융합대학 가을 축제</p>
+                            <p class="text-faded mb-0"><2019년 문화융합대 가을축제></p>
 		<p class="text-faded mb-0">- 운영부 축제 단원으로 활동</p>
-		<p class="text-faded mb-0">2020년 2월 ~ 2020년 12월</p>
-		<p class="text-faded mb-0">- 문화융합대학 학생회 단원으로 활동</p>
-		<p class="text-faded mb-0">2020년 봉사활동</p>
-		<p class="text-faded mb-0">- 인형 만들기, 컬러링 북 제작 등 여러 가지를 만들어서 아동센터와 노인복지센터에 지원</p>
-		<p class="text-faded mb-0">2020년 다운 학교 홈페이지 제작</p>
-		<p class="text-faded mb-0">- 장애인 복지학교인 다운학교의 홈페이지를 제작</p>
-		<p class="text-faded mb-0">2020년 에이모 아르바이트</p>
+		<p class="text-faded mb-0"><2020년 2월 ~ 2020년 12월></p>
+		<p class="text-faded mb-0">- 문화융합대학 학생회 활동</p>
+		<p class="text-faded mb-0"><2020년 봉사활동></p>
+		<p class="text-faded mb-0">- 인형 만들기, 컬러링 북 제작 등 직접 만들어서 아동센터와 노인복지센터 지원</p>
+		<p class="text-faded mb-0"><2020년 다온학교></p>
+		<p class="text-faded mb-0">- 다온학교의 홈페이지를 제작</p>
+		<p class="text-faded mb-0"><2020년 에이모 아르바이트></p>
 		<p class="text-faded mb-0">- 빅데이터 모으는 작업</p>
                         </p>
                     </div>
@@ -105,7 +108,7 @@
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
-                    다운 장애인 학교
+                    다온 장애인 학교
                 </h2>
                 <a class="btn btn-primary btn-xl" href="http://jjdaon.iwinv.net/wp/">홈페이지</a>
             </div>
@@ -123,7 +126,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">캡스톤 디자인</div>
-                                    <p class="mb-0">스마트 빨래 건조대</p>
+                                    <p class="mb-0">스마트 건조대를 기획하고 작업했습니다</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
@@ -134,7 +137,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">홈페이지 제작</div>
-                                    <p class="mb-0">다운 학교 홈페이지 제작</p>
+                                    <p class="mb-0">장애인 복지 학교인 다온 학교 홈페이지를 제작했습니다</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
@@ -144,8 +147,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
-                                    <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                                    <div class="h2">빽과사전</div>
+                                    <p class="mb-0">팀 프로젝트로 자취생들을 위한 플랫폼  홈페이지를 제작했습니다</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
@@ -155,8 +158,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
-                                    <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                                    <div class="h2">미정</div>
+                                    <p class="mb-0">미정</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
@@ -168,7 +171,7 @@
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+                <h2 class="mb-4">같이 일하고 싶습니다!</h2>
                 <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
                 <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
             </div>
