--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">같이 일하고 싶습니다!</h2>
                 <a class="btn btn-xl btn-light me-4" href="https://www.jobkorea.co.kr/User/Resume/View?rNo=19884651">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="https://www.google.co.kr/maps/place/%EC%A0%84%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90/@35.8135117,127.0846753,17z/data=!3m1!4b1!4m5!3m4!1s0x35703b0ebe179653:0x8c68077367282427!8m2!3d35.8135074!4d127.086864?hl=ko">Look at Me!</a>
+                 <a class="btn btn-xl btn-dark" href="https://blog.naver.com/0516asdfg/222386370477">Look at Me!</a>
             </div>
         </section>
         <!-- Map-->
