--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
-                <li class="sidebar-nav-item"><a href="#services">Activities</a></li>
+                <li class="sidebar-nav-item"><a href="#services">Services</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
             </ul>
@@ -55,7 +55,7 @@
             </div>
         </section>
         <!-- Services-->
-        <section class="content-section bg-primary text-white text-center" id="Service">
+        <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">soyoung park</h3>
@@ -175,7 +175,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">같이 일하고 싶습니다!</h2>
                 <a class="btn btn-xl btn-light me-4" href="https://www.jobkorea.co.kr/User/Resume/View?rNo=19884651">Click Me!</a>
-                 <a class="btn btn-xl btn-dark" href="https://blog.naver.com/0516asdfg/222386370477">Look at Me!</a>
+                <a class="btn btn-xl btn-dark" href="https://blog.naver.com/0516asdfg">Look at Me!</a>
             </div>
         </section>
         <!-- Map-->
